// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the quote card > draws ^AXJO 1d 1`] = `
[
  "head: ^AXJO S&P/ASX 200 [XJO]",
  "figures: 8,750.90 AUD ▲ +68.80 (+0.79%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 8,682.104:12 PM",
  "bars: Day 8,686.40 8,753.0052w 8,262.40 9,296.70",
  "footer: Yahoo Finance · may be delayed · updated 18 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws ^GSPC 1d 1`] = `
[
  "head: ^GSPC S&P 500",
  "figures: 7,773.95 USD ▲ +51.23 (+0.66%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 7,722.724:00 PM",
  "bars: Day 7,727.59 7,794.3552w 6,316.91 7,816.70",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws AAPL 1d 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws AAPL 5d 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: Sep 29from 332.53Oct 5",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws AUDUSD=X 1d 1`] = `
[
  "head: AUDUSD=X AUD/USD",
  "figures: 0.6978 USD ▲ +0.0004 (+0.06%)",
  "phase live: ● Open · closes 11:59 PM BST",
  "chart: 12:00 AMprev close 0.697411:59 PM",
  "bars: Day 0.6966 0.697852w 0.6422 0.7277",
  "footer: Yahoo Finance · may be delayed · updated 3 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws BHP.AX 1d 1`] = `
[
  "head: BHP.AX BHP Group Limited",
  "figures: 62.63 AUD ▲ +0.73 (+1.19%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 61.894:12 PM",
  "bars: Day 62.06 62.7352w 40.17 68.77",
  "stats: First trade 62.25Vol 2.4MExch ASX",
  "footer: Yahoo Finance · may be delayed · updated 17 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws BTC-USD 1d 1`] = `
[
  "head: BTC-USD Bitcoin USD",
  "figures: 85,459.57 USD ▼ −600.89 (−0.70%) 24h",
  "phase live: ● Trading 24/7",
  "chart: 12:00 AMprev close 85,750.5811:59 PM",
  "bars: Day 85,453.82 86,054.3952w 57,747.77 125,184.02",
  "stats: First trade 85,766.77Vol 28.2BExch CCC",
  "footer: Yahoo Finance · may be delayed · updated 2 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws CBA.AX 1d 1`] = `
[
  "head: CBA.AX Commonwealth Bank of Australia",
  "figures: 152.09 AUD ▲ +0.87 (+0.58%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 151.224:12 PM",
  "bars: Day 150.50 152.2952w 146.98 185.59",
  "stats: First trade 152.23Vol 647.8KExch ASX",
  "footer: Yahoo Finance · may be delayed · updated 22 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws Cboe, 15 minutes delayed 1`] = `
[
  "head: AAPL",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "bars: Day 331.65 336.19",
  "stats: Open 332.80Vol 34.3MExch NasdaqGS",
  "footer: Cboe · 15-min delayed · 4:00 PM EDT",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws London pence 1`] = `
[
  "head: VOD.L Vodafone Group Plc",
  "figures: 127.20p ▲ +0.73 (+1.19%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 61.894:12 PM",
  "bars: Day 62.06 62.7352w 40.17 68.77",
  "stats: First trade 62.25Vol 2.4MExch LSE",
  "footer: Yahoo Finance · may be delayed · updated 17 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws MSFT 1d 1`] = `
[
  "head: MSFT Microsoft Corporation",
  "figures: 525.18 USD ▲ +7.65 (+1.48%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 517.534:00 PM",
  "bars: Day 521.53 532.3552w 349.20 553.72",
  "stats: First trade 521.82Vol 26.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws NVDA 1d 1`] = `
[
  "head: NVDA NVIDIA Corporation",
  "figures: 238.90 USD ▲ +4.95 (+2.12%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 233.954:00 PM",
  "bars: Day 235.15 240.1052w 164.27 240.10",
  "stats: First trade 236.07Vol 126.4MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws TEAM 1d 1`] = `
[
  "head: TEAM Atlassian Corporation",
  "figures: 196.65 USD ▲ +8.76 (+4.66%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 187.894:00 PM",
  "bars: Day 186.50 197.5052w 56.01 200.00",
  "stats: First trade 187.88Vol 3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws a currency pair 1`] = `
[
  "head: AUDUSD=X AUD/USD",
  "figures: 0.6978 USD ▲ +0.0004 (+0.06%)",
  "phase live: ● Open · closes 11:59 PM BST",
  "chart: 12:00 AMprev close 0.697411:59 PM",
  "bars: Day 0.6966 0.697852w 0.6422 0.7277",
  "footer: Yahoo Finance · may be delayed · updated 3 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws a hostile name 1`] = `
[
  "head: AAPL <img src=x onerror=alert(1)><script>alert(2)</script>",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch <b>NMS</b>",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws a resolved name 1`] = `
[
  "head: CBA.AX Commonwealth Bank of Australia",
  "figures: 152.09 AUD ▲ +0.87 (+0.58%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 151.224:12 PM",
  "bars: Day 150.50 152.2952w 146.98 185.59",
  "stats: First trade 152.23Vol 647.8KExch ASX",
  "footer: Yahoo Finance · may be delayed · updated 22 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws a snapshot 1`] = `
[
  "head: TEAM Atlassian Corporation",
  "figures: 196.65 USD ▲ +8.76 (+4.66%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "bars: Day 186.50 197.5052w 56.01 200.00",
  "stats: First trade 187.88Vol 3MExch NasdaqGS",
  "footer: Yahoo Finance · snapshot as of 11:30 PM EDT",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws an index 1`] = `
[
  "head: ^AXJO S&P/ASX 200 [XJO]",
  "figures: 8,750.90 AUD ▲ +68.80 (+0.79%)",
  "phase live: ● Open · closes 4:12 PM AEDT",
  "chart: 10:00 AMprev close 8,682.104:12 PM",
  "bars: Day 8,686.40 8,753.0052w 8,262.40 9,296.70",
  "footer: Yahoo Finance · may be delayed · updated 18 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws crypto over 24 hours 1`] = `
[
  "head: BTC-USD Bitcoin USD",
  "figures: 85,459.57 USD ▼ −600.89 (−0.70%) 24h",
  "phase live: ● Trading 24/7",
  "chart: 12:00 AMprev close 85,750.5811:59 PM",
  "bars: Day 85,453.82 86,054.3952w 57,747.77 125,184.02",
  "stats: First trade 85,766.77Vol 28.2BExch CCC",
  "footer: Yahoo Finance · may be delayed · updated 2 min ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws five days 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: Sep 29from 332.53Oct 5",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws from memory 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws live from the Worker 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws live through the interim proxy 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance via public proxy, may be slow · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws no periods, no change 1`] = `
[
  "head: AAPL Apple Inc.",
  "figures: 332.89 USD",
  "phase: Last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Yahoo Finance · may be delayed · updated 8 h ago",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws saved copy after a timeout 1`] = `
[
  "head: AAPL Apple Inc. STALE",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Saved copy from 2 h ago · live data unavailable (timed out)",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws saved copy while offline 1`] = `
[
  "head: AAPL Apple Inc. STALE",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Saved copy from 2 h ago · live data unavailable (you're offline)",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote card > draws stale from the Worker 1`] = `
[
  "head: AAPL Apple Inc. STALE",
  "figures: 332.89 USD ▼ −0.80 (−0.24%)",
  "phase: ○ Closed · last trade 4:00 PM EDT",
  "chart: 9:30 AMprev close 333.694:00 PM",
  "bars: Day 331.65 336.1952w 243.42 345.34",
  "stats: First trade 332.80Vol 34.3MExch NasdaqGS",
  "footer: Saved copy from 2 h ago · live data unavailable (service unavailable)",
  "chips: refresh1d5d1mo1y",
]
`;

exports[`the quote table > has a row per ticker, the failures inline, every colour a token 1`] = `
[
  [
    "AAPL",
    "332.89 USD",
    "▼ −0.24%",
    "▼ −0.80",
    "",
  ],
  [
    "CBA.AX STALE",
    "152.09 AUD",
    "▲ +0.58%",
    "▲ +0.87",
    "",
  ],
  [
    "BTC-USD",
    "85,459.57 USD",
    "▼ −0.70%",
    "▼ −600.89",
    "",
  ],
  [
    "ZZZZQQ",
    "— not found",
  ],
]
`;
